--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul>
             <li><a href="#"><i class="fa-solid fa-heart" style="color: #ff2929;"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-bookmark" style="color: #ffffff;"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i></a></li>
+            <li><a href="actorsGallery.html" target="_blank"><i class="fa-solid fa-star-half-stroke" style="color: #FFD43B;"></i></a></li>
         </ul>
 
     </div>
